--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                 </tbody>
             </table>
         </div>
-        
-        <div id="container" class="container">
+        <hr style="b">
+        <div class="row" style="text-align: center;">
+            <div id="container" class="container">
+            </div>
         </div>
 
     </div>
